--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,21 @@ body {
     overflow: hidden;
   }
   
+#scene-container {
+    /* tell our scene container to take up the full page */
+    width: 100%;
+    height: 100%;
+  
+    /*
+      Set the container's background color to the same as the scene's
+      background to prevent flashing on load
+    */
+}
+
+canvas {
+    display: block;
+}
+
 .sidenav {
     height: 100%;
     width: 0;
